change response 204 to 200 for update & delete projects
